syntax = "proto3";

package msbuild;

option java_multiple_files = true;
option java_package = "com.tuware.msbuild.proto";
option java_outer_classname = "MsbuildProto";

service Project {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
